<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:text="@string/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10" />

        <TextView
            android:text="@string/second_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/second_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10" />

        <TextView
            android:text="@string/first_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/first_last_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10" />

        <TextView
            android:text="@string/second_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/second_last_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10" />

        <TextView
            android:text="@string/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/age_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10" />

        <TextView
            android:text="@string/sex_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup android:id="@+id/sex_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_text"
                android:id="@+id/male_radio_button" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_text"
                android:id="@+id/female_radio_button" />
        </RadioGroup>

        <TextView
            android:text="@string/blood_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner android:id="@+id/blood_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/blood_types" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?actionBarStyle"
            android:orientation="horizontal" >
            <Button android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                style="?actionButtonStyle"
                android:onClick="save"
                android:text="@string/save_button" />
            <Button android:id="@+id/erase_button"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                style="?actionButtonStyle"
                android:onClick="erase"
                android:text="@string/erase_button" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
